Changelog for collective.editskinswitcher
=========================================

1.2 (unreleased)
----------------

- Nothing changed yet.


1.1 (2010-12-07)
----------------

- Use ``get_header`` instead of ``get`` when looking for headers to
  force logging in or force using the edit skin.
  [maurits]

- Allow setting a default skin on a folder, using the new Styles
  context menu.
  [dreamcatcher]


1.0 (2010-06-07)
----------------

- Fix: when we need authentication and we are anonymous then we do
  *not* want to switch: we want to have the default behaviour of
  getting the standard skin instead of the edit skin.  Added some more
  inline documentation.
  [maurits]

- Switch back to checking the ``__ac`` cookie to see if someone is
  anonymous or not; the getSecurityManager check always says we are
  anonymous, though I thought I had seen it working previously.
  [maurits]

- Add logging lines for debugging.
  [maurits]


0.9 (2010-04-19)
----------------

- Change the switch skin action to a multiple selection.  When one
  of the selected actions returns True, we switch the skin.
  [maurits]

- Also accept urls like admin.example.org as edit urls.
  [maurits]


0.8 (2010-04-16)
----------------

- Slightly better check for anonymous users, using getSecurityManager
  instead of checking for an ``__ac`` cookie.
  [maurits]

- When a X_FORCE_LOGIN header is passed (exact spelling is configurable)
  only allow access to logged in users (you get redirected usually).
  [maurits]

- Allow specifying the admin_header; defaults to HTTP_PLONEADMIN.
  [maurits]

- Added z3c.autoinclude.plugin entry point for plone, to avoid having
  collective.editskinswitcher in the zcml option of your zope
  instance; only effective in Plone 3.3 or higher.  In earlier
  versions you still need to do this manually.
  [maurits]


0.7 (2008-10-04)
----------------

- Added switching option based on a request header flag set by the
  proxy server (eg. Apache)